--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,11 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
+    implementation 'mbuhot:eskotlin:0.7.0'
+
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
